fix(core): US16484 - Premium icon/message wrong color

--- a/app/modules/core/customers/customerOverview/_customer-overview.scss
+++ b/app/modules/core/customers/customerOverview/_customer-overview.scss
@@ -18,6 +18,7 @@
 
   .premium {
     text-align: center;
+    color: $gray-light-1;
 
     .premium-customer {
       font-family: $brand-font-cisco-TT-Light;
